--- a/.hgignore
+++ b/.hgignore
@@ -2,11 +2,16 @@ syntax: glob
 *.pyc
 *.pyo
 .*
+
+# created by py2app
 build/*
 dist/*
-debian/musiccontroller*
+# created by debuild
+debian/music-controller*
 debian/files
-python-module-stampdir/musiccontroller
-musiccontroller.egg-info*
+python-module-stampdir/music-controller
+MusicController.egg-info*
+# created by setup.py
 src/buildinfo.py
+# created by merurial
 *.orig
