add generated man page to ignore files list.

--- a/.hgignore
+++ b/.hgignore
@@ -6,12 +6,17 @@ syntax: glob
 # created by py2app
 build/*
 dist/*
+
 # created by debuild
 debian/music-controller*
 debian/files
 python-module-stampdir/music-controller
 MusicController.egg-info*
+
 # created by setup.py
 src/buildinfo.py
+man/music-controller.1.gz
+man/*/music-controller.1.gz
+
 # created by merurial
 *.orig
