--- a/unix/music-controller.desktop
+++ b/unix/music-controller.desktop
@@ -4,6 +4,6 @@ Comment=Pretty client for MusicPlayerDaemon.
 Exec=music-controller
 Type=Application
 Icon=gtk-media-stop
-Categories=Audio;
+Categories=Audio;AudioVideo;Player;
 StartupNotify=true
 
